@@ -1,5 +1,5 @@
 Package: jfcraft
-Version: 0.16
+Version: 0.17
 Architecture: all
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
